<resources>
    <string name="app_name">Lac_temperature_tp5</string>
    <string name="buttonQuitter">Quitter</string>
    <string name="buttonAfficherTempMois">Afficher température mois</string>
    <string name="buttonAfficherTempJour">Afficher température jours</string>
    <string name="buttonSaisirTemp">Saisir température</string>
    <string name="textViewMessageDate">Choisissez une date</string>
    <string name="textViewNomLac">Lac de Beaulieu</string>
    <string name="textViewCoordonnees">48.366689/6.83394415</string>
    <string name="textViewChoixHeures">heure:</string>
    <string name="textViewSaisirTemp">température</string>
    <string name="editTextTemp" />
    <string name="radioButtonCelFahr">Conversion de Celsius en Fahrenheit</string>
    <string name="radioButtonFahrCel">Conversion de Fahrenheit en Celsius</string>
    <string name="buttonConvertir">Convertir</string>
    <string name="buttonRetourAccueil">Retour</string>
    <string name="textViewSaisir">Saisir un relevé</string>
    <string name="textViewNom">Saisir le nom du lac</string>
    <string name="editTextNom">Lac de Beaulieu</string>
    <string name="textViewSaisirTemperature">Saisir le température relevé</string>
    <string name="editTextDegré" />
    <string name="textViewDateById" />
    <string name="textViewJour">jour</string>
    <string name="textViewMois">mois</string>
    <string name="textViewHeure">heure</string>
    <string name="textViewTemp">temperature</string>
    <string name="editTextCoordonnees">48.366689/6.8394415</string>
    <string name="buttonSaisirEnregistrer">Enregistrer</string>
    <string name="textViewCoordonnee">Coordonnées GPS</string>
    <string name="textViewTempMois">Affichage de la température par mois</string>
    <string name="textViewChoixMois">Choix du mois</string>
    <string name="editSaisirTemp" />
    <string name="buttonEnregistrer">Enregistrer</string>
    <string name="buttonBdd">Affichage Température Jours</string>
    <string name="textViewMessage">Choisir une date</string>
    <string name="textViewId">Id</string>
    <string name="textViewDate" />
    <string name="textViewChoixJour">Choisir le jour :</string>
    <string name="radioButtonLundi">Lundi</string>
    <string name="radioButtonMardi">Mardi</string>
    <string name="radioButtonMercredi">Mercredi</string>
    <string name="radioButtonJeudi">Jeudi</string>
    <string name="radioButtonVendredi">Vendredi</string>
    <string name="radioButtonSamedi">Samedi</string>
    <string name="radioButtonDimanche">Dimanche</string>
    <string name="textViewMoyenne">Affichage de la moyenne des températures</string>
    <string name="buttonMoyenne">Moyenne température</string>
    <string name="editTextMoyenne" />
    <string name="textViewSaisirMois">Saisir un mois :</string>
    <string name="editTextMois" />
    <string name="buttonAfficherMoyenne">Afficher la moyenne</string>
    <string name="radioButtonFahr">Afficher en Fahrenheit</string>
    <string name="radioButtonCel">Afficher temperature en Celsius</string>
    <string name="textViewSaisiTemp" />
    <string name="buttonRechercher">Rechercher</string>
    <string name="textViewAffihageTempJour">Affichage des Température par jours :</string>
    <string name="textViewJours">Saisir un jour ( numéro):</string>
    <string name="buttonRechercherJour">Rechercher</string>
    <string name="textViewTempJour" />
    <string name="editTextJour" />
    <string name="textViewJoursMois">Saisir un mois (numéro) :</string>
    <string name="editTextJourMois" />
</resources>
