<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/textViewTempMois"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/textViewTempMois"
        android:textSize="24sp" />


    <TextView
        android:id="@+id/textViewChoixMois"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewChoixMois"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinnerMois"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textViewSaisirTemp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonSaisirTemp" />

    <EditText
        android:id="@+id/editTextSaisirTemp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/editSaisirTemp" />

    <TextView
        android:id="@+id/textViewChoixHeures"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewChoixHeures" />

    <Spinner
        android:id="@+id/spinnerChoixHeure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonEnregistrer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonEnregistrer" />

        <Button
            android:id="@+id/buttonRetourAccueil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonRetourAccueil" />
    </LinearLayout>

</LinearLayout>