<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewMoyenne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textViewMoyenne" />

            <TextView
                android:id="@+id/textViewSaisiMois"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textViewSaisirMois" />

            <EditText
                android:id="@+id/editTextMois"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/editTextMois" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/radioButtonCel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radioButtonCel" />

                <RadioButton
                    android:id="@+id/radioButtonFahr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radioButtonFahr" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textViewTemp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/textViewSaisiTemp" />

                        <Button
                            android:id="@+id/buttonRechercher"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/buttonRechercher" />
                    </LinearLayout>

                </LinearLayout>

            </RadioGroup>


        </LinearLayout>

    </LinearLayout>


</LinearLayout>