<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewAffichageTempJour"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_weight="1"
                android:text="@string/textViewAffihageTempJour" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewJours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textViewJours" />

                <EditText
                    android:id="@+id/editTextJour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/editTextJour" />

                <TextView
                    android:id="@+id/textViewJoursMois"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textViewJoursMois" />

                <EditText
                    android:id="@+id/editTextJourMois"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/editTextJourMois" />

                <Button
                    android:id="@+id/buttonRechercherJour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/buttonRechercherJour" />

                <Button
                    android:id="@+id/buttonRetourAccueil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/buttonRetourAccueil" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ListView
                        android:id="@+id/ListeJourTemp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>