<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewMessageDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textViewMessageDate" />

                <CalendarView
                    android:id="@+id/calendrier"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewNomLac"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/textViewNomLac" />

                    <TextView
                        android:id="@+id/textViewDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="TextView" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewCoordonnees"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/textViewCoordonnees" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textViewSaisirTemp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textViewSaisirTemp" />

                <EditText
                    android:id="@+id/editTextTemp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/editTextTemp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RadioButton
                            android:id="@+id/radioButtonCelFahr"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/radioButtonCelFahr" />

                        <RadioButton
                            android:id="@+id/radioButtonFahrCel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/radioButtonFahrCel" />

                    </RadioGroup>

                    <Button
                        android:id="@+id/buttonConvertir"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/buttonConvertir" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/buttonRetourAccueil"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/buttonRetourAccueil" />

                        <Button
                            android:id="@+id/buttonBdd"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/buttonBdd" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/textViewDateById"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/textViewDateById" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>



</LinearLayout>