<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewSaisir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"

                android:gravity="center_horizontal|center_vertical"
                android:text="@string/textViewSaisir"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textViewDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textViewDate" />

            <TextView
                android:id="@+id/textViewNom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textViewNom"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lac de Beaulieu"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewChoixJour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textViewChoixJour" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <Spinner
                        android:id="@+id/spinnerJours"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/textViewChoixMois"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textViewChoixMois" />

                    <Spinner
                        android:id="@+id/spinnerMois"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/textViewSaisirTemperature"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textViewSaisirTemperature"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/editTextDegré"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@string/editTextDegré" />

                    <TextView
                        android:id="@+id/textViewCoordonnee"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textViewCoordonnee"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/editTextCoordonnees"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@string/editTextCoordonnees" />

                    <TextView
                        android:id="@+id/textViewChoixHeures"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textViewChoixHeures" />

                    <Spinner
                        android:id="@+id/spinnerChoixHeure"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <Button
                                android:id="@+id/buttonSaisirEnregistrer"
                                android:layout_width="155dp"
                                android:layout_height="93dp"
                                android:layout_weight="1"
                                android:layout_gravity="center_horizontal|center_vertical"
                                android:gravity="center_horizontal|center_vertical"
                                android:text="@string/buttonSaisirEnregistrer" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:orientation="horizontal">

                                <Button
                                    android:id="@+id/buttonBdd"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/buttonBdd" />

                                <Button
                                    android:id="@+id/buttonRetourAccueil"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/buttonRetourAccueil" />
                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    </ScrollView>

</LinearLayout>