<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="142dp"
                android:layout_height="140dp"
                app:srcCompat="@drawable/grenouille" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="120dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="FrogTemp"
                android:textAlignment="center"
                android:textSize="30sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="130dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="Accueil"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonSaisirTemp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonSaisirTemp" />

        <Button
            android:id="@+id/buttonAfficherTempJours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonAfficherTempJour" />

        <Button
            android:id="@+id/buttonAfficherTempMois"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonAfficherTempMois" />


        <Button
            android:id="@+id/buttonMoyenne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonMoyenne" />

        <Button
            android:id="@+id/buttonQuitter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonQuitter" />


    </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>